Cleaned Up HTML CSS

--- a/click-click/css/main.css
+++ b/click-click/css/main.css
@@ -1,4 +1,3 @@
-
 html,body { width: 100%; height: 200%; }
 body {
 	margin:20px;
@@ -16,6 +15,14 @@ link {
     display: none;
 }
 
+hr{
+	display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid #ccc;
+    margin: .75em 0;
+    padding-bottom:2.5%;
+}
 .home{
 	/* #AwkwardMoment: */
 	position: fixed;
@@ -25,19 +32,12 @@ link {
 	left:20px;
 	top:20px;
 }
-.page2link:hover{
-	color:#0B8DC8;
-}
+
 .bodycontent{
-	/* One of my female fri: */
 	position:relative;
 	display: inline-block;
 	top:8%;
-/*	overflow: scroll;
-	overflow-y: auto;*/
-/*	margin:auto;*/
 	font-family: UniversLTStd;
-	font-size: 21px;
 	color: black;
 	line-height: 37px;
 /*	padding-top:10%;*/
@@ -62,399 +62,622 @@ link {
     		margin-top: -1000px;
     	}
     }
+.page1link{
+	color:black;
 }
-.post{
-	/* One of my female fri: */
-/*	position:fixed;*/
-	top:5%;
-	font-family: UniversLTStd;
-	font-size: 24px;
-	color: black;
-	line-height: 33px;
-/*	padding-top:10%;*/
-}
-.post2{
-/*position: fixed;*/
-top:54%;
+.page1link:hover{
+	color:#0B8DC8;
 }
 
-.post3{
-/*position: fixed;*/
-
-top:81%;
-}
-.post4{
-/*position: fixed;*/
-top:111%;
-}
-/*.post1{
-position:fixed;
-top:30%;
-}*/
-
-.author{
+.author1{
 	/* Mohammad Ali */
 	font-family: UniversLTStd-Bold;
 	font-size: 18px;
 	color: #000000;
-/*	-webkit-animation-name: move;
-    -webkit-animation-duration: 8s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: bottom;
-    -webkit-animation-timing-function: linear;*/
-/*	padding-bottom:5px;*/
-}
-/*.bodycontent:hover{
-	-webkit-animation-play-state: paused;
-    }
-    
-    @-webkit-keyframes move {
-    	0% {
-    		margin-top: -400px;
-    	}
-    	100% {
-    		margin-bottom: 800px;
-    	}
-    }
-}*/
-.author1{
-/*	position:absolute;*/
-	top:10%;
-}
-.author2{
-	position:absolute;
-	top:5%;
-}
-.author3{
-	position:absolute;
-	top:9.5%;
-}
-.author4{
-	position:absolute;
-	top:16%;
-}
-.author5{
-	position:absolute;
-	top:21.5%;
-}
-.author6{
-	position:absolute;
-	top:27%;
-}
-.author7{
-	position:absolute;
-	top:31.5%;
-}
-.author8{
-	position:absolute;
-	top:37%;
-}
-.author9{
-	position:absolute;
-	top:43.4%;
-}
-.author10{
-	position:absolute;
-	top:49.5%;
-}
-.author11{
-	position:absolute;
-	top:56%;
-}
-.author12{
-	position:absolute;
-	top:61.4%;
-}
-.author13{
-	position:absolute;
-	top:66%;
-}
-.author14{
-	position:absolute;
-	top:72.4%;
-}
-.author15{
-	position:absolute;
-	top:77%;
-}
-.author16{
-	position:absolute;
-	top:82.3%;
-}
-.author17{
-	position:absolute;
-	top:88.5%;
-}
-.author18{
-	position:absolute;
-	top:94%;
+	/*padding-top:10%;*/
 }
 
-
-
-.username{
+.username1{
 	/* @maglolz: */
-
 	font-family: UniversLTStd;
 	font-size: 13px;
 	font-style: italic;
 	color: #000000;
-	padding-bottom:10px;
-}
-.username1{
 	position:absolute;
 	top:0.4%;
-}
-.username2{
-	position:absolute;
-	top:5.4%;
-}
-.username3{
-	position:absolute;
-	top:10%;
-}
-.username4{
-	position:absolute;
-	top:16.4%;
-}
-.username5{
-	position:absolute;
-	top:21.9%;
-}
-.username6{
-	position:absolute;
-	top:27.4%;
-}
-.username7{
-	position:absolute;
-	top:31.9%;
-}
-.username8{
-	position:absolute;
-	top:37.4%;
-}
-.username9{
-	position:absolute;
-	top:43.8%;
-}
-.username10{
-	position:absolute;
-	top:49.9%;
-}
-.username11{
-	position:absolute;
-	top:56.4%;
-}
-.username12{
-	position:absolute;
-	top:61.9%;
-}
-.username13{
-	position:absolute;
-	top:66.4%;
-}
-.username14{
-	position:absolute;
-	top:72.9%;
-}
-.username15{
-	position:absolute;
-	top:77.4%;
-}
-.username16{
-	position:absolute;
-	top:82.8%;
-}
-.username17{
-	position:absolute;
-	top:88.9%;
-}
-.username18{
-	position:absolute;
-	top:94.4%;
-}
-
-.date{
-	font-style: italic;
-	/* 16 Dec 2017: */
-	font-family: UniversLTStd;
-	font-size: 13px;
-	color: #000000;
 }
 .date1{
-	top:0.4%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
 	right:0%;
 	position:absolute;
+	top:1.5%;
 }
 
+.post1{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author2{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username2{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:5.5%;
+}
 .date2{
-	top:5.4%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
 	right:0%;
 	position:absolute;
+	top:52%;
+}
+.post2{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author3{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username3{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:10.8%;
 }
 .date3{
-	top:10.9%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
 	right:0%;
 	position:absolute;
+	top:52%;
+}
+.post3{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author4{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username4{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:17.1%;
 }
 .date4{
-	top:16.4%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
 	right:0%;
 	position:absolute;
+	top:52%;
+}
+.post4{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author5{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username5{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:22.3%;
 }
 .date5{
-	top:21.9%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:52%;
+}
+.post5{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author6{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username6{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:27.66%;
 }
 .date6{
-	top:27.4%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:52%;
+}
+.post6{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author7{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username7{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:33%;
 }
 .date7{
-	top:31.9%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:52%;
+}
+.post7{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author8{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username8{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:38.3%;
 }
 .date8{
-	top:37.4%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:56.9%;
+}
+.post8{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author9{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username9{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:44.5%;
 }
 .date9{
-	top:43.8%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:66.1%;
+}
+.post9{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}.author10{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username10{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:50.7%;
 }
 .date10{
-	top:49.9%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:75.4%;
+}
+.post10{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author11{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username11{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:56.9%;
 }
 .date11{
-	top:56.4%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:84.55%;
+}
+.post11{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author12{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username12{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:63.1%;
 }
 .date12{
-	top:61.4%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:93.75%;
+}
+.post12{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author13{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username13{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:67.5%;
 }
 .date13{
-	top:66.5%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:93.75%;
+}
+.post13{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author14{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username14{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:73.7%;
 }
 .date14{
-	top:72.9%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:93.75%;
+}
+.post14{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author15{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username15{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:78.1%;
 }
 .date15{
-	top:77.4%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:93.75%;
+}
+.post15{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author16{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username16{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:83.4%;
 }
 .date16{
-	top:82.8%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:93.75%;
+}
+.post16{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author17{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username17{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:89.65%;
 }
 .date17{
-	top:88.9%;
-	right:1%;
+	font-style: italic;
+	font-family: UniversLTStd;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
 	position:absolute;
+	top:93.75%;
+}
+.post17{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
+	color: black;
+	line-height: 33px;
+}
+.author18{
+	/* Mohammad Ali */
+	font-family: UniversLTStd-Bold;
+	font-size: 18px;
+	color: #000000;
+	/*padding-top:10%;*/
+}
+
+.username18{
+	/* @maglolz: */
+	font-family: UniversLTStd;
+	font-size: 13px;
+	font-style: italic;
+	color: #000000;
+	padding-top:9px;
+	position:absolute;
+	top:94.95%;
 }
 .date18{
-	top:94.4%;
-	right:1%;
-	position:absolute;
-}
-
-hr{
-	display: block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #ccc;
-    margin: .75em 0;
-    padding-bottom:9%;
-}
-/*hr.line1 {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #ccc;
-    margin: .75em 0;
-    padding-bottom:9%;
-
-}
-hr.line2 {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #ccc;
-    margin: .75em 0;
-    padding-bottom:9%;
-
-}
-hr.line3 {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #ccc;
-    margin: .75em 0;
-    padding-bottom:9%;
-
-}
-hr.line4 {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #ccc;
-
-    margin: .75em 0;
-    padding-bottom:9%;
-
-}*/
-/*i {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 10px;
-
-}*/
-.up {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-   	left:49%;
-    position:fixed;
-    top:4%;
-}
-.down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-   	left:49%;
-   	bottom:4%;
-    position:fixed;
-}
-.mainpost1{
-		/* One of my female fri: */
+	font-style: italic;
 	font-family: UniversLTStd;
-	font-size: 30px;
-	/*padding-top:20%*/;
-/*	padding-right: 19%;*/
-/*	padding-left: 20%;*/
-	line-height: 40px;
-	text-align: left ;
+	font-size: 13px;
+	color: #000000;
+	right:0%;
+	position:absolute;
+	top:93.75%;
+}
+.post18{
+	padding-top:19px;
+	font-family: UniversLTStd;
+	font-size: 20px;
 	color: black;
-	line-height: 48px;
+	line-height: 33px;
 }
-.authormainpost1{
-/* Chasing Holiness Copy: */
-font-family: UniversLTStd-Bold;
-font-size: 24px;
-color: #000000;
-position: fixed;
-}
+
