--- a/personal-journey-archive/css/main.css
+++ b/personal-journey-archive/css/main.css
@@ -1,17 +1,230 @@
 html,body { width: 100%; height: 100%; }
 
-
 /* Changing fonts */
-/*	@font-face {font-family: "LibreBaskerville-Regular"; src: url("../fonts/LibreBaskerville-Regular.ttf"); }
-*/
-.names{
-	font-family: Arial;
-/*	transform: rotate(-90deg);color: #E4D9DA;
-	-webkit-transform: rotate(-90deg);*/
-	font-size: 17px;
-	
-/*	position:fixed;*/
-/*	top:30%*/
-	left:28%;
-	bottom:33%;
+	@font-face {font-family: "FTB"; src: url("../fonts/FTB.ttf"); }
+	@font-face {font-family: "FTLC"; src: url("../fonts/FTLC.ttf"); }
+
+body{
+	/*margin:10%;*/
+	font-family: FTB;
 }
+
+h1{
+	position:fixed;
+	top:22%;
+	left:44%;
+	font-size:30pt;
+	line-height: 40pt;
+	text-align: center;
+}
+.names{
+	font-family: FTB;
+	font-size: 17px;
+}
+.travel{
+	position:fixed;
+	bottom:10%;
+	right:39%;}
+
+.travel1{
+	width: 200px;
+    height: auto;
+	/*padding-left:30px;
+	padding-right:30px;*/
+}
+.home{
+	position:fixed;
+	bottom:10%;
+	right:10%;
+
+}
+.home1{
+	width: 200px;
+    height: auto;
+}
+.food{
+	position:fixed;
+	top:10%;
+}
+.food1{
+	width: 200px;
+    height: auto;
+}
+.lifestyle{
+	position:fixed;
+	bottom:10%;
+}
+
+.lifestyle1{
+	width: 200px;
+    height: auto;
+}
+
+.missing{
+	position:fixed;
+	top:10%;
+	right:10%;
+}
+.missing1{
+	width: 200px;
+    height: auto;
+}
+
+.hotpot{
+	position:fixed;
+	top:28%;
+	right:20%;
+	width: 370px;
+    height: auto;
+}
+.yogurt{
+	position:fixed;
+	top:21%;
+	left:20%;
+	width: 370px;
+    height: auto;
+}
+.esra{
+	position:fixed;
+	bottom:31%;
+	left:35%;
+}
+.khe{
+	position:fixed;
+	bottom:31%;
+	right: 21%;
+}
+.family{
+	position:fixed;
+	top:30%;
+	right:22%;
+	width: 350px;
+    height: auto;
+}
+.china{
+	position:fixed;
+	top:28%;
+	left:21%;
+	width: 370px;
+    height: auto;
+}
+.shut{
+	position:fixed;
+	bottom:29%;
+	left:37%;
+}
+.emily{
+	position:fixed;
+	bottom:29%;
+	right: 24%;
+	z-index: 2;
+}
+.parsons{
+	position:fixed;
+	bottom:17%;
+	right:12%;
+	width: 310px;
+    height: auto;
+}
+.routine{
+	position:fixed;
+	top:12%;
+	right:25%;
+	width: 290px;
+    height: auto;
+}
+.swim{
+	position:fixed;
+	top:10%;
+	left:25%;
+	width: 350px;
+    height: auto;
+}
+.bg{
+    position:fixed;
+	bottom:17%;
+	left:12%;
+	width: 300px;
+    height: auto;
+}
+.dog{
+	position:fixed;
+	bottom:17%;
+	right:40%;
+	width: 310px;
+    height: auto;
+}
+
+.kristen{
+	position:fixed;
+	bottom:20%;
+	right: 10%;
+	z-index: 2;
+}
+.jahyun{
+	position:fixed;
+	top:41%;
+	right: 23%;
+	z-index: 2;
+	z-index: 2;
+}
+.vincentg{
+	position:fixed;
+	top:41%;
+	left:42%;
+	z-index: 2;
+}
+.seowon{
+	position:fixed;
+	bottom:20%;
+	right:37%;
+	z-index: 2;
+}
+.prithi{
+	position:fixed;
+	bottom:20%;
+	left:28%;
+	z-index: 2;
+}
+
+.roadtrip{
+	position:fixed;
+	top:28%;
+	left:12%;
+	width: 280px;
+    height: auto;
+}
+.costa{
+	position:fixed;
+	top:28%;
+	right:12%;
+	width: 330px;
+    height: auto;
+}
+.threetrip{
+	position:fixed;
+	top:28%;
+	right:38%;
+	width: 330px;
+    height: auto;
+}
+
+.soyeon{
+	position:fixed;
+	bottom:24%;
+	right:37%;
+	z-index: 2;
+}
+.evelin{
+	position:fixed;
+	bottom:24%;
+	right: 10%;
+	z-index: 2;
+}
+.emil{
+	position:fixed;
+	bottom:24%;
+	left:28%;
+	z-index: 2;
+}
+
